[gd_scene load_steps=11 format=3 uid="uid://d211rm0e1dwhc"]

[ext_resource type="PackedScene" uid="uid://q0chcul4t876" path="res://dialogue/dialogue.tscn" id="1_np3c4"]
[ext_resource type="Script" uid="uid://dgqnnlrjl7jrs" path="res://Game Scenes/Password/password_game.gd" id="1_srhji"]
[ext_resource type="LabelSettings" uid="uid://uroktm3eaxo0" path="res://Game Scenes/Phishing/score_label.tres" id="2_srhji"]
[ext_resource type="FontFile" uid="uid://dlxeofevbk4t2" path="res://MainMenu/Font/LuckiestGuy-Regular.ttf" id="3_ej5a2"]
[ext_resource type="FontFile" uid="uid://dawgypwmlmqre" path="res://Game Scenes/Password/VIEMON.ttf" id="3_srhji"]
[ext_resource type="FontFile" uid="uid://8swg6l30n6tg" path="res://MainMenu/Font/CyberTechnoDemo-Regular.otf" id="5_83cnm"]
[ext_resource type="LabelSettings" uid="uid://6i4uxhfky4l0" path="res://MainMenu/Font/Main_Menu_NAME_100px.tres" id="6_5oyew"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk1d6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar52r"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diou6"]
bg_color = Color(1, 0.509804, 0.458824, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="PasswordGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srhji")
e_file = "res://Game Scenes/Password/passwords.json"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sk1d6")

[node name="current_pw" type="Label" parent="."]
custom_minimum_size = Vector2(400, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -206.5
offset_right = 20.0
offset_bottom = -183.5
grow_horizontal = 2
grow_vertical = 2
text = "test Password"
label_settings = ExtResource("2_srhji")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PW1" type="Button" parent="."]
custom_minimum_size = Vector2(275, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -437.5
offset_top = -25.0
offset_right = -162.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_srhji")
theme_override_font_sizes/font_size = 20
text = "PW1"

[node name="PW2" type="Button" parent="."]
custom_minimum_size = Vector2(275, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -25.0
offset_right = 137.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_srhji")
theme_override_font_sizes/font_size = 20
text = "pw2"

[node name="PW3" type="Button" parent="."]
custom_minimum_size = Vector2(275, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 162.5
offset_top = -25.0
offset_right = 437.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_srhji")
theme_override_font_sizes/font_size = 20
text = "pw3"

[node name="block_click" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogue" parent="." instance=ExtResource("1_np3c4")]
visible = false
d_file = "res://Game Scenes/Password/password_dialogue.json"

[node name="tip_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -391.0
offset_top = 25.0
offset_right = -21.0
offset_bottom = 205.0
grow_horizontal = 0

[node name="tip" type="Label" parent="tip_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_83cnm")
theme_override_font_sizes/font_size = 35
text = "test
"
autowrap_mode = 2

[node name="FinalScorePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ar52r")

[node name="Score" type="Panel" parent="FinalScorePanel"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -190.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_diou6")

[node name="FinalScoreText" type="Label" parent="FinalScorePanel/Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -59.0
offset_right = 89.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "20"
label_settings = ExtResource("2_srhji")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="FinalScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 42.0
offset_right = 333.0
offset_bottom = 159.0
grow_horizontal = 2
text = "Your Score is:"
label_settings = ExtResource("6_5oyew")
horizontal_alignment = 1
vertical_alignment = 1

[node name="retry" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -302.0
offset_right = 480.0
offset_bottom = -152.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ej5a2")
theme_override_font_sizes/font_size = 50
text = "RETRY"

[node name="main_menu" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -302.0
offset_right = -200.0
offset_bottom = -152.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ej5a2")
theme_override_font_sizes/font_size = 50
text = "MAIN MENU"

[node name="next_level" type="Button" parent="FinalScorePanel"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -776.0
offset_top = -266.0
offset_right = -496.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ej5a2")
theme_override_font_sizes/font_size = 50
text = "NEXT LEVEL"

[connection signal="pressed" from="PW1" to="." method="_on_pw_1_pressed"]
[connection signal="pressed" from="PW2" to="." method="_on_pw_2_pressed"]
[connection signal="pressed" from="PW3" to="." method="_on_pw_3_pressed"]
[connection signal="pressed" from="FinalScorePanel/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="FinalScorePanel/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="FinalScorePanel/next_level" to="." method="_on_next_level_pressed"]
